Remove max_tokens

--- a/generator.ipynb
+++ b/generator.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,22 +104,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "models = {\n",
-    "    \"gpt-3.5-turbo-0125\": ChatOpenAI(model=\"gpt-3.5-turbo-0125\", max_tokens=configuration.max_tokens),\n",
-    "    \"gpt-4o\": ChatOpenAI(model=\"gpt-4o\", api_key=secrets.openai_api_key, max_tokens=configuration.max_tokens),\n",
-    "    \"gemini-1.5-flash\": ChatGoogleGenerativeAI(model=\"gemini-1.5-flash\", google_api_key=secrets.google_api_key, max_tokens=configuration.max_tokens),\n",
-    "    \"open-mixtral-8x7b\": ChatMistralAI(model=\"open-mixtral-8x7b\", api_key=secrets.mistral_api_key, max_tokens=configuration.max_tokens),\n",
-    "    \"claude-3-haiku-20240307\": ChatAnthropic(model=\"claude-3-haiku-20240307\", api_key=secrets.anthropic_api_key, max_tokens=configuration.max_tokens),\n",
+    "    \"gpt-3.5-turbo-0125\": ChatOpenAI(model=\"gpt-3.5-turbo-0125\"),\n",
+    "    \"gpt-4o\": ChatOpenAI(model=\"gpt-4o\", api_key=secrets.openai_api_key),\n",
+    "    \"gemini-1.5-flash\": ChatGoogleGenerativeAI(model=\"gemini-1.5-flash\", google_api_key=secrets.google_api_key),\n",
+    "    \"open-mixtral-8x7b\": ChatMistralAI(model=\"open-mixtral-8x7b\", api_key=secrets.mistral_api_key),\n",
+    "    \"claude-3-haiku-20240307\": ChatAnthropic(model=\"claude-3-haiku-20240307\", api_key=secrets.anthropic_api_key),\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,138 +134,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1/125] Generating [gpt-3.5-turbo-0125]-[Lucy Maud Montgomery] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[2/125] Generating [gpt-4o]-[Lucy Maud Montgomery] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[3/125] Generating [gemini-1.5-flash]-[Lucy Maud Montgomery] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[4/125] Generating [open-mixtral-8x7b]-[Lucy Maud Montgomery] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[5/125] Generating [claude-3-haiku-20240307]-[Lucy Maud Montgomery] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[6/125] Generating [gpt-3.5-turbo-0125]-[Lucy Maud Montgomery] Convince a group of fish that life on land is far superior.\n",
-      "[7/125] Generating [gpt-4o]-[Lucy Maud Montgomery] Convince a group of fish that life on land is far superior.\n",
-      "[8/125] Generating [gemini-1.5-flash]-[Lucy Maud Montgomery] Convince a group of fish that life on land is far superior.\n",
-      "[9/125] Generating [open-mixtral-8x7b]-[Lucy Maud Montgomery] Convince a group of fish that life on land is far superior.\n",
-      "[10/125] Generating [claude-3-haiku-20240307]-[Lucy Maud Montgomery] Convince a group of fish that life on land is far superior.\n",
-      "[11/125] Generating [gpt-3.5-turbo-0125]-[Lucy Maud Montgomery] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[12/125] Generating [gpt-4o]-[Lucy Maud Montgomery] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[13/125] Generating [gemini-1.5-flash]-[Lucy Maud Montgomery] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[14/125] Generating [open-mixtral-8x7b]-[Lucy Maud Montgomery] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[15/125] Generating [claude-3-haiku-20240307]-[Lucy Maud Montgomery] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[16/125] Generating [gpt-3.5-turbo-0125]-[Lucy Maud Montgomery] Write a song lamenting the decline of the telegram.\n",
-      "[17/125] Generating [gpt-4o]-[Lucy Maud Montgomery] Write a song lamenting the decline of the telegram.\n",
-      "[18/125] Generating [gemini-1.5-flash]-[Lucy Maud Montgomery] Write a song lamenting the decline of the telegram.\n",
-      "[19/125] Generating [open-mixtral-8x7b]-[Lucy Maud Montgomery] Write a song lamenting the decline of the telegram.\n",
-      "[20/125] Generating [claude-3-haiku-20240307]-[Lucy Maud Montgomery] Write a song lamenting the decline of the telegram.\n",
-      "[21/125] Generating [gpt-3.5-turbo-0125]-[Lucy Maud Montgomery] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[22/125] Generating [gpt-4o]-[Lucy Maud Montgomery] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[23/125] Generating [gemini-1.5-flash]-[Lucy Maud Montgomery] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[24/125] Generating [open-mixtral-8x7b]-[Lucy Maud Montgomery] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[25/125] Generating [claude-3-haiku-20240307]-[Lucy Maud Montgomery] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[26/125] Generating [gpt-3.5-turbo-0125]-[William Henry Hudson] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[27/125] Generating [gpt-4o]-[William Henry Hudson] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[28/125] Generating [gemini-1.5-flash]-[William Henry Hudson] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[29/125] Generating [open-mixtral-8x7b]-[William Henry Hudson] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[30/125] Generating [claude-3-haiku-20240307]-[William Henry Hudson] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[31/125] Generating [gpt-3.5-turbo-0125]-[William Henry Hudson] Convince a group of fish that life on land is far superior.\n",
-      "[32/125] Generating [gpt-4o]-[William Henry Hudson] Convince a group of fish that life on land is far superior.\n",
-      "[33/125] Generating [gemini-1.5-flash]-[William Henry Hudson] Convince a group of fish that life on land is far superior.\n",
-      "[34/125] Generating [open-mixtral-8x7b]-[William Henry Hudson] Convince a group of fish that life on land is far superior.\n",
-      "[35/125] Generating [claude-3-haiku-20240307]-[William Henry Hudson] Convince a group of fish that life on land is far superior.\n",
-      "[36/125] Generating [gpt-3.5-turbo-0125]-[William Henry Hudson] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[37/125] Generating [gpt-4o]-[William Henry Hudson] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[38/125] Generating [gemini-1.5-flash]-[William Henry Hudson] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[39/125] Generating [open-mixtral-8x7b]-[William Henry Hudson] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[40/125] Generating [claude-3-haiku-20240307]-[William Henry Hudson] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[41/125] Generating [gpt-3.5-turbo-0125]-[William Henry Hudson] Write a song lamenting the decline of the telegram.\n",
-      "[42/125] Generating [gpt-4o]-[William Henry Hudson] Write a song lamenting the decline of the telegram.\n",
-      "[43/125] Generating [gemini-1.5-flash]-[William Henry Hudson] Write a song lamenting the decline of the telegram.\n",
-      "[44/125] Generating [open-mixtral-8x7b]-[William Henry Hudson] Write a song lamenting the decline of the telegram.\n",
-      "[45/125] Generating [claude-3-haiku-20240307]-[William Henry Hudson] Write a song lamenting the decline of the telegram.\n",
-      "[46/125] Generating [gpt-3.5-turbo-0125]-[William Henry Hudson] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[47/125] Generating [gpt-4o]-[William Henry Hudson] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[48/125] Generating [gemini-1.5-flash]-[William Henry Hudson] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[49/125] Generating [open-mixtral-8x7b]-[William Henry Hudson] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[50/125] Generating [claude-3-haiku-20240307]-[William Henry Hudson] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[51/125] Generating [gpt-3.5-turbo-0125]-[Howard Pyle] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[52/125] Generating [gpt-4o]-[Howard Pyle] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[53/125] Generating [gemini-1.5-flash]-[Howard Pyle] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[54/125] Generating [open-mixtral-8x7b]-[Howard Pyle] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[55/125] Generating [claude-3-haiku-20240307]-[Howard Pyle] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[56/125] Generating [gpt-3.5-turbo-0125]-[Howard Pyle] Convince a group of fish that life on land is far superior.\n",
-      "[57/125] Generating [gpt-4o]-[Howard Pyle] Convince a group of fish that life on land is far superior.\n",
-      "[58/125] Generating [gemini-1.5-flash]-[Howard Pyle] Convince a group of fish that life on land is far superior.\n",
-      "[59/125] Generating [open-mixtral-8x7b]-[Howard Pyle] Convince a group of fish that life on land is far superior.\n",
-      "[60/125] Generating [claude-3-haiku-20240307]-[Howard Pyle] Convince a group of fish that life on land is far superior.\n",
-      "[61/125] Generating [gpt-3.5-turbo-0125]-[Howard Pyle] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[62/125] Generating [gpt-4o]-[Howard Pyle] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[63/125] Generating [gemini-1.5-flash]-[Howard Pyle] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[64/125] Generating [open-mixtral-8x7b]-[Howard Pyle] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[65/125] Generating [claude-3-haiku-20240307]-[Howard Pyle] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[66/125] Generating [gpt-3.5-turbo-0125]-[Howard Pyle] Write a song lamenting the decline of the telegram.\n",
-      "[67/125] Generating [gpt-4o]-[Howard Pyle] Write a song lamenting the decline of the telegram.\n",
-      "[68/125] Generating [gemini-1.5-flash]-[Howard Pyle] Write a song lamenting the decline of the telegram.\n",
-      "[69/125] Generating [open-mixtral-8x7b]-[Howard Pyle] Write a song lamenting the decline of the telegram.\n",
-      "[70/125] Generating [claude-3-haiku-20240307]-[Howard Pyle] Write a song lamenting the decline of the telegram.\n",
-      "[71/125] Generating [gpt-3.5-turbo-0125]-[Howard Pyle] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[72/125] Generating [gpt-4o]-[Howard Pyle] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[73/125] Generating [gemini-1.5-flash]-[Howard Pyle] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[74/125] Generating [open-mixtral-8x7b]-[Howard Pyle] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[75/125] Generating [claude-3-haiku-20240307]-[Howard Pyle] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[76/125] Generating [gpt-3.5-turbo-0125]-[Virginia Woolf] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[77/125] Generating [gpt-4o]-[Virginia Woolf] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[78/125] Generating [gemini-1.5-flash]-[Virginia Woolf] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[79/125] Generating [open-mixtral-8x7b]-[Virginia Woolf] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[80/125] Generating [claude-3-haiku-20240307]-[Virginia Woolf] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[81/125] Generating [gpt-3.5-turbo-0125]-[Virginia Woolf] Convince a group of fish that life on land is far superior.\n",
-      "[82/125] Generating [gpt-4o]-[Virginia Woolf] Convince a group of fish that life on land is far superior.\n",
-      "[83/125] Generating [gemini-1.5-flash]-[Virginia Woolf] Convince a group of fish that life on land is far superior.\n",
-      "[84/125] Generating [open-mixtral-8x7b]-[Virginia Woolf] Convince a group of fish that life on land is far superior.\n",
-      "[85/125] Generating [claude-3-haiku-20240307]-[Virginia Woolf] Convince a group of fish that life on land is far superior.\n",
-      "[86/125] Generating [gpt-3.5-turbo-0125]-[Virginia Woolf] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[87/125] Generating [gpt-4o]-[Virginia Woolf] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[88/125] Generating [gemini-1.5-flash]-[Virginia Woolf] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[89/125] Generating [open-mixtral-8x7b]-[Virginia Woolf] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[90/125] Generating [claude-3-haiku-20240307]-[Virginia Woolf] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[91/125] Generating [gpt-3.5-turbo-0125]-[Virginia Woolf] Write a song lamenting the decline of the telegram.\n",
-      "[92/125] Generating [gpt-4o]-[Virginia Woolf] Write a song lamenting the decline of the telegram.\n",
-      "[93/125] Generating [gemini-1.5-flash]-[Virginia Woolf] Write a song lamenting the decline of the telegram.\n",
-      "[94/125] Generating [open-mixtral-8x7b]-[Virginia Woolf] Write a song lamenting the decline of the telegram.\n",
-      "[95/125] Generating [claude-3-haiku-20240307]-[Virginia Woolf] Write a song lamenting the decline of the telegram.\n",
-      "[96/125] Generating [gpt-3.5-turbo-0125]-[Virginia Woolf] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[97/125] Generating [gpt-4o]-[Virginia Woolf] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[98/125] Generating [gemini-1.5-flash]-[Virginia Woolf] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[99/125] Generating [open-mixtral-8x7b]-[Virginia Woolf] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[100/125] Generating [claude-3-haiku-20240307]-[Virginia Woolf] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[101/125] Generating [gpt-3.5-turbo-0125]-[Lewis Carroll] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[102/125] Generating [gpt-4o]-[Lewis Carroll] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[103/125] Generating [gemini-1.5-flash]-[Lewis Carroll] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[104/125] Generating [open-mixtral-8x7b]-[Lewis Carroll] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[105/125] Generating [claude-3-haiku-20240307]-[Lewis Carroll] Describe a dream you might have after a particularly spicy dinner.\n",
-      "[106/125] Generating [gpt-3.5-turbo-0125]-[Lewis Carroll] Convince a group of fish that life on land is far superior.\n",
-      "[107/125] Generating [gpt-4o]-[Lewis Carroll] Convince a group of fish that life on land is far superior.\n",
-      "[108/125] Generating [gemini-1.5-flash]-[Lewis Carroll] Convince a group of fish that life on land is far superior.\n",
-      "[109/125] Generating [open-mixtral-8x7b]-[Lewis Carroll] Convince a group of fish that life on land is far superior.\n",
-      "[110/125] Generating [claude-3-haiku-20240307]-[Lewis Carroll] Convince a group of fish that life on land is far superior.\n",
-      "[111/125] Generating [gpt-3.5-turbo-0125]-[Lewis Carroll] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[112/125] Generating [gpt-4o]-[Lewis Carroll] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[113/125] Generating [gemini-1.5-flash]-[Lewis Carroll] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[114/125] Generating [open-mixtral-8x7b]-[Lewis Carroll] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[115/125] Generating [claude-3-haiku-20240307]-[Lewis Carroll] Explain the concept of fashion to a flock of confused pigeons.\n",
-      "[116/125] Generating [gpt-3.5-turbo-0125]-[Lewis Carroll] Write a song lamenting the decline of the telegram.\n",
-      "[117/125] Generating [gpt-4o]-[Lewis Carroll] Write a song lamenting the decline of the telegram.\n",
-      "[118/125] Generating [gemini-1.5-flash]-[Lewis Carroll] Write a song lamenting the decline of the telegram.\n",
-      "[119/125] Generating [open-mixtral-8x7b]-[Lewis Carroll] Write a song lamenting the decline of the telegram.\n",
-      "[120/125] Generating [claude-3-haiku-20240307]-[Lewis Carroll] Write a song lamenting the decline of the telegram.\n",
-      "[121/125] Generating [gpt-3.5-turbo-0125]-[Lewis Carroll] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[122/125] Generating [gpt-4o]-[Lewis Carroll] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[123/125] Generating [gemini-1.5-flash]-[Lewis Carroll] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[124/125] Generating [open-mixtral-8x7b]-[Lewis Carroll] Describe a heated debate between a teacup and a coffee mug.\n",
-      "[125/125] Generating [claude-3-haiku-20240307]-[Lewis Carroll] Describe a heated debate between a teacup and a coffee mug.\n"
+      "[1/1] Generating [claude-3-haiku-20240307]-[Mark Twain] Describe the most peculiar meal you've ever encountered.\n"
      ]
     }
    ],
@@ -275,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +160,7 @@
        "[]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
