--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -750,7 +750,7 @@
          ],
          "xaxis": "x",
          "y": [
-          688274,
+          689448,
           630247,
           607500,
           559328,
@@ -6086,6 +6086,33 @@
    ],
    "source": [
     "AnalysisVisualization().visualize(analysis_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "& 267k & 291k & 310k & 303k & 273k & 290k & 299k & 294k & 290k & 300k \n",
+      "& 322k & 340k & 342k & 302k & 253k & 276k & 269k & 260k & 251k & 262k \n",
+      "& 296k & 311k & 318k & 280k & 252k & 278k & 286k & 279k & 278k & 263k \n",
+      "& 251k & 251k & 289k & 260k & 252k & 266k & 252k & 251k & 251k & 251k \n",
+      "& 689k & 630k & 608k & 559k & 558k & 547k & 589k & 481k & 470k & 608k "
+     ]
+    }
+   ],
+   "source": [
+    "for collection_name, data in analysis_data.items():\n",
+    "    if collection_name == 'books':\n",
+    "        continue\n",
+    "    print(\"\")\n",
+    "    for author_data in data:\n",
+    "        print(f\"& {round(author_data.word_count / 1000)}k\", end=\" \")"
    ]
   }
  ],
