Add cleaning and refactor res_dir strucutre

--- a/book_stats.ipynb
+++ b/book_stats.ipynb
@@ -32,7 +32,7 @@
     "import os\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
-    "from src import Configuration, FileUtils"
+    "from src import Settings, FileUtils"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "configuration = Configuration()"
+    "settings = Settings()"
    ]
   },
   {
@@ -65,7 +65,7 @@
     }
    ],
    "source": [
-    "authors = open(configuration.all_authors_filepath, 'r', encoding='utf-8').read().split('\\n')\n",
+    "authors = open(settings.paths.all_authors_filepath, 'r', encoding='utf-8').read().split('\\n')\n",
     "authors[:5]"
    ]
   },
@@ -166,7 +166,7 @@
    "source": [
     "df = pd.DataFrame(columns=['author', 'book', 'words_count'])\n",
     "\n",
-    "for author_name, books in FileUtils.read_books(authors, configuration.all_book_data_directory).items():\n",
+    "for author_name, books in FileUtils.read_books(authors, settings.paths.all_book_data_directory).items():\n",
     "    for book in books:\n",
     "        words_count = len(book['content'].split())\n",
     "        df.loc[len(df)] = [author_name, book[\"title\"], words_count]\n",
@@ -207,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(configuration.all_books_csv_filepath, index=False)"
+    "df.to_csv(settings.paths.all_books_csv_filepath, index=False)"
    ]
   },
   {
@@ -79539,8 +79539,8 @@
    "outputs": [],
    "source": [
     "selected_authors = df_10_total_sorted['author'].tolist()\n",
-    "os.makedirs(configuration.selected_books_dir, exist_ok=True)\n",
-    "with open(configuration.selected_authors_filepath, 'w', encoding='utf-8') as f:\n",
+    "os.makedirs(settings.paths.selected_books_dir, exist_ok=True)\n",
+    "with open(settings.paths.selected_authors_filepath, 'w', encoding='utf-8') as f:\n",
     "    f.write('\\n'.join(selected_authors))"
    ]
   },
@@ -79550,7 +79550,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_10.to_csv(configuration.selected_books_csv_filepath, index=False)"
+    "df_10.to_csv(settings.paths.selected_books_csv_filepath, index=False)"
    ]
   },
   {
