--- a/generator.ipynb
+++ b/generator.ipynb
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "secrets = Secrets()\n",
-    "configuration = Configuration()"
+    "settings = Settings()"
    ]
   },
   {
@@ -122,10 +122,10 @@
    "source": [
     "text_generator = TextGenerator(\n",
     "    models=models,\n",
-    "    queries_path=configuration.query_filepath,\n",
-    "    authors_path=configuration.selected_authors_filepath,\n",
-    "    res_directory=configuration.res_directory,\n",
-    "    response_number_of_words=configuration.response_number_of_words\n",
+    "    queries_path=settings.paths.query_filepath,\n",
+    "    authors_path=settings.paths.selected_authors_filepath,\n",
+    "    res_directory=settings.paths.res_directory,\n",
+    "    response_number_of_words=settings.configuration.response_number_of_words\n",
     ")"
    ]
   },
