--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -22,9 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,9 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaning generated corpus...\n",
+      "Cleaning books corpus...\n"
+     ]
+    }
+   ],
    "source": [
     "cleaner = Cleaner(settings)\n",
     "if not cleaner.cleaned_generated_corpus_exists():\n",
@@ -58,9 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading authors' collections...\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Reading authors' collections...\")\n",
     "authors = []\n",
@@ -76,9 +102,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw words count:  31471741\n",
+      "Cleaned words count:  31172626\n",
+      "Removed words:  0.9504240645600127 %\n"
+     ]
+    }
+   ],
    "source": [
     "analysis = Analysis(\n",
     "    settings=settings,\n",
@@ -93,20 +129,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\piotr\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
-    "analysis_data = analysis.analyze(authors)"
+    "analysis = Analysis(\n",
+    "    settings=settings,\n",
+    "    authors=authors\n",
+    ")\n",
+    "analysis_data = analysis.get_analysis(authors, read_from_file=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "AnalysisVisualization.__init__() missing 1 required positional argument: 'settings'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[44], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mAnalysisVisualization\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mvisualize(analysis_data)\n",
+      "\u001b[1;31mTypeError\u001b[0m: AnalysisVisualization.__init__() missing 1 required positional argument: 'settings'"
+     ]
+    }
+   ],
    "source": [
-    "AnalysisVisualization().visualize(analysis_data)"
+    "visualization = AnalysisVisualization(settings)\n",
+    "visualization.visualize(analysis_data)"
    ]
   }
  ],
