Save cleaning info to file

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -111,31 +111,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed text: 0.9401511228114402%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "analysis = Analysis(\n",
     "    settings=settings,\n",
     "    authors=authors,\n",
-    "    preprocessing_data=preprocessing_data\n",
-    ")\n",
-    "raw_text_length, cleaned_text_length = analysis.text_length()\n",
-    "\n",
-    "print(f\"Removed text: {100 * (raw_text_length - cleaned_text_length) / raw_text_length}%\")"
+    "    preprocessing_data=preprocessing_data,\n",
+    "    read_from_file=True\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -143,41 +133,14 @@
      "output_type": "stream",
      "text": [
       "Analysing collections using sample of 10000 words per collection...\n",
-      "         author_name collection_name  unique_word_count  average_word_length  \\\n",
-      "0         Mark Twain           books               2667             4.465797   \n",
-      "1          Zane Grey           books               2251             4.333217   \n",
-      "2      Joseph Conrad           books               2278             4.289102   \n",
-      "3       George Eliot           books               2161             4.145784   \n",
-      "4  Benjamin Disraeli           books               2330             4.291768   \n",
-      "\n",
-      "   average_sentence_length  average_syllables_per_word  flesch_reading_ease  \\\n",
-      "0                25.397015                    1.441114            59.138765   \n",
-      "1                17.389113                    1.388174            71.745537   \n",
-      "2                12.383260                    1.406854            75.246141   \n",
-      "3                24.621701                    1.316341            70.481515   \n",
-      "4                13.396411                    1.354968            78.607321   \n",
-      "\n",
-      "   flesch_kincaid_grade_level  gunning_fog_index    !  ...    s   to  his  \\\n",
-      "0                   11.319984          14.155045    8  ...    0  192    0   \n",
-      "1                    7.572206          10.299413   27  ...    0  196   98   \n",
-      "2                    5.840349           8.634082   52  ...    0  206  121   \n",
-      "3                    9.545288          12.197418   16  ...  153  206  120   \n",
-      "4                    5.623227           7.993732  152  ...    0  139    0   \n",
-      "\n",
-      "   her  its  said  was  had   he   as  \n",
-      "0    0    0     0  119    0    0    0  \n",
-      "1    0    0     0  108  109  148    0  \n",
-      "2    0    0     0  137    0  171    0  \n",
-      "3    0    0     0    0    0    0  116  \n",
-      "4    0    0     0    0    0  104    0  \n",
-      "\n",
-      "[5 rows x 69 columns]\n"
+      "Removed text: 0.9401511228114402%\n"
      ]
     }
    ],
    "source": [
     "print(f\"Analysing collections using sample of {settings.configuration.analysis_size} words per collection...\")\n",
-    "analysis_data = analysis.get_analysis(authors, read_from_file=True)"
+    "analysis_data = analysis.get_analysis(authors)\n",
+    "print(f\"Removed text: {analysis_data.percentage_of_removed_text}%\")"
    ]
   },
   {
