Add read_from_file flag

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -119,13 +119,13 @@
     "    settings=settings,\n",
     "    authors=authors,\n",
     "    preprocessing_data=preprocessing_data,\n",
-    "    read_from_file=True\n",
+    "    read_from_file=settings.configuration.read_analysis_from_file\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -133,30 +133,21 @@
      "output_type": "stream",
      "text": [
       "Analysing collections using sample of 10000 words per collection...\n",
-      "Removed text: 0.9401511228114402%\n"
+      "Text removed while cleaning: 0.9401511228114402 %.\n"
      ]
     }
    ],
    "source": [
     "print(f\"Analysing collections using sample of {settings.configuration.analysis_size} words per collection...\")\n",
     "analysis_data = analysis.get_analysis(authors)\n",
-    "print(f\"Removed text: {analysis_data.percentage_of_removed_text}%\")"
+    "print(f\"Text removed while cleaning: {analysis_data.percentage_of_removed_text}%.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\piotr\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
