--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 10 features of PC1: ['flesch_reading_ease', 'of', 'that', 'gunning_fog_index', 'average_syllables_per_word', 'flesch_kincaid_grade_level', '\"', '?', 'average_word_length', '-']\n",
+      "Top 10 features of PC2: ['in', 'a', '*', 'average_sentence_length', ')', '(', '-', 'and', 'flesch_kincaid_grade_level', '&']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Top 10 features of PC1: {analysis_data.pca.top_10_features[\"PC1\"]}\")\n",
+    "print(f\"Top 10 features of PC2: {analysis_data.pca.top_10_features[\"PC2\"]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
