--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,31 +140,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Analysing collections using sample of 200000 words per collection...\n",
-      "Text removed while cleaning: 1.0128367970170837%.\n"
+      "Analysing collections using sample of 200000 words per collection...\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'AnalysisData' object has no attribute 'percentage_of_removed_text'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[30], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAnalysing collections using sample of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msettings\u001b[38;5;241m.\u001b[39mconfiguration\u001b[38;5;241m.\u001b[39manalysis_number_of_words\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m words per collection...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m analysis_data \u001b[38;5;241m=\u001b[39m analysis\u001b[38;5;241m.\u001b[39mget_analysis(authors)\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mText removed while cleaning: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43manalysis_data\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpercentage_of_removed_text\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m%.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'AnalysisData' object has no attribute 'percentage_of_removed_text'"
      ]
     }
    ],
    "source": [
     "print(f\"Analysing collections using sample of {settings.configuration.analysis_number_of_words} words per collection...\")\n",
     "analysis_data = analysis.get_analysis(authors)\n",
-    "print(f\"Text removed while cleaning: {analysis_data.percentage_of_removed_text}%.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pca_data = analysis_data.pca.data"
+    "print(f\"Text removed while cleaning: {analysis_data.metadata.percentage_of_removed_text}%.\")"
    ]
   },
   {
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
