--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -140,25 +140,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Analysing collections using sample of 200000 words per collection...\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'AnalysisData' object has no attribute 'percentage_of_removed_text'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[30], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAnalysing collections using sample of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msettings\u001b[38;5;241m.\u001b[39mconfiguration\u001b[38;5;241m.\u001b[39manalysis_number_of_words\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m words per collection...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m analysis_data \u001b[38;5;241m=\u001b[39m analysis\u001b[38;5;241m.\u001b[39mget_analysis(authors)\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mText removed while cleaning: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43manalysis_data\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpercentage_of_removed_text\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m%.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'AnalysisData' object has no attribute 'percentage_of_removed_text'"
+      "Analysing collections using sample of 200000 words per collection...\n",
+      "Text removed while cleaning: 1.0128367970170837%.\n"
      ]
     }
    ],
@@ -170,21 +160,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Top 10 features of PC1: ['of', 'yules_characteristic_k', 'simpsons_index', 'the', 'our', 'its', 'flesch_reading_ease', 'he', 'was', '-']\n",
-      "Top 10 features of PC2: ['to', '*', 'and', 'in', 'as', 'that', 'a', 'average_sentence_length', ',', '.']\n"
+     "ename": "AttributeError",
+     "evalue": "'PCAData' object has no attribute 'top_10_features'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[34], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTop 10 features of PC1: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43manalysis_data\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpca\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtop_10_features\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPC1\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTop 10 features of PC2: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00manalysis_data\u001b[38;5;241m.\u001b[39mpca\u001b[38;5;241m.\u001b[39mtop_10_features[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPC2\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'PCAData' object has no attribute 'top_10_features'"
      ]
     }
    ],
    "source": [
-    "print(f\"Top 10 features of PC1: {analysis_data.pca.top_10_features[\"PC1\"]}\")\n",
-    "print(f\"Top 10 features of PC2: {analysis_data.pca.top_10_features[\"PC2\"]}\")"
+    "print(f\"Top 10 features of PC1: {analysis_data.pca.top_features[\"PC1\"]}\")\n",
+    "print(f\"Top 10 features of PC2: {analysis_data.pca.top_features[\"PC2\"]}\")"
    ]
   },
   {
