--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -132,7 +132,6 @@
    "source": [
     "analysis = Analysis(\n",
     "    settings=settings,\n",
-    "    authors=authors,\n",
     "    preprocessing_data=preprocessing_data,\n",
     "    read_from_file=settings.configuration.read_analysis_from_file\n",
     ")"
@@ -140,15 +139,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Analysing collections using sample of 200000 words per collection...\n",
-      "Text removed while cleaning: 1.0128367970170837%.\n"
+      "Analysing collections using sample of 200000 words per collection...\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "MetadataAnalysis.get_percentage_of_removed_text() missing 1 required positional argument: 'authors'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAnalysing collections using sample of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msettings\u001b[38;5;241m.\u001b[39mconfiguration\u001b[38;5;241m.\u001b[39manalysis_number_of_words\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m words per collection...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m analysis_data \u001b[38;5;241m=\u001b[39m \u001b[43manalysis\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_analysis\u001b[49m\u001b[43m(\u001b[49m\u001b[43mauthors\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mText removed while cleaning: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00manalysis_data\u001b[38;5;241m.\u001b[39mmetadata\u001b[38;5;241m.\u001b[39mpercentage_of_removed_text\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m%.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Projects\\Thesis\\src\\analysis\\analysis.py:34\u001b[0m, in \u001b[0;36mAnalysis.get_analysis\u001b[1;34m(self, authors)\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mread_from_file:\n\u001b[0;32m     33\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m FileUtils\u001b[38;5;241m.\u001b[39mread_analysis_data(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpaths\u001b[38;5;241m.\u001b[39manalysis_filepath)\n\u001b[1;32m---> 34\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43manalyze\u001b[49m\u001b[43m(\u001b[49m\u001b[43mauthors\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Projects\\Thesis\\src\\analysis\\analysis.py:41\u001b[0m, in \u001b[0;36mAnalysis.analyze\u001b[1;34m(self, authors)\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21manalyze\u001b[39m(\u001b[38;5;28mself\u001b[39m, authors: List[Author]) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m AnalysisData:\n\u001b[0;32m     37\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Analyze the authors and their collections\"\"\"\u001b[39;00m\n\u001b[0;32m     38\u001b[0m     analysis_data \u001b[38;5;241m=\u001b[39m AnalysisData(\n\u001b[0;32m     39\u001b[0m         author_names\u001b[38;5;241m=\u001b[39m[author\u001b[38;5;241m.\u001b[39mname \u001b[38;5;28;01mfor\u001b[39;00m author \u001b[38;5;129;01min\u001b[39;00m authors],\n\u001b[0;32m     40\u001b[0m         collection_names\u001b[38;5;241m=\u001b[39m[collection\u001b[38;5;241m.\u001b[39mname \u001b[38;5;28;01mfor\u001b[39;00m collection \u001b[38;5;129;01min\u001b[39;00m authors[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mcleaned_collections],\n\u001b[1;32m---> 41\u001b[0m         metadata\u001b[38;5;241m=\u001b[39mMetadata(percentage_of_removed_text\u001b[38;5;241m=\u001b[39m\u001b[43mMetadataAnalysis\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_percentage_of_removed_text\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m     42\u001b[0m     )\n\u001b[0;32m     44\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m author \u001b[38;5;129;01min\u001b[39;00m authors:\n\u001b[0;32m     45\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m collection \u001b[38;5;129;01min\u001b[39;00m author\u001b[38;5;241m.\u001b[39mcleaned_collections:\n",
+      "\u001b[1;31mTypeError\u001b[0m: MetadataAnalysis.get_percentage_of_removed_text() missing 1 required positional argument: 'authors'"
      ]
     }
    ],
