--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -497,6 +497,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text removed while cleaning: 0.9765146365788469%.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Text removed while cleaning: {MetadataAnalysis.get_percentage_of_removed_text(authors)}%.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -505,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -518,36 +535,30 @@
    ],
    "source": [
     "print(\"Preprocessing collections...\")\n",
-    "preprocessing_results = Preprocessing(settings, authors).preprocess()"
+    "preprocessing_results = Preprocessing(settings).preprocess(authors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Analysing collections using sample of 200000 words per collection...\n",
-      "Text removed while cleaning: 0.9765146365788469%.\n"
+      "Analysing collections' metrics using sample of 200000 words per auhtor-collection pair...\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Analysing collections using sample of {settings.configuration.analysis_number_of_words} words per collection...\")\n",
-    "analysis_results = Analysis(\n",
-    "    settings=settings,\n",
-    "    preprocessing_results=preprocessing_results,\n",
-    "    read_from_file=settings.configuration.read_analysis_from_file\n",
-    ").get_analysis(authors)\n",
-    "print(f\"Text removed while cleaning: {analysis_results.metadata.percentage_of_removed_text}%.\")"
+    "print(f\"Analysing collections' metrics using sample of {settings.configuration.analysis_number_of_words} words per auhtor-collection pair...\")\n",
+    "metrics_analysis_results = MetricsAnalysis(settings).analyze(preprocessing_results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -17393,7 +17404,7 @@
     }
    ],
    "source": [
-    "AnalysisVisualization(settings).visualize(analysis_results)"
+    "AnalysisVisualization(settings).visualize(metrics_analysis_results)"
    ]
   }
  ],
