Adjust buttons style

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2973,7 +2973,7 @@
         "height": 1500,
         "legend": {
          "title": {
-          "text": "Text source"
+          "text": "Collection"
          }
         },
         "template": {
@@ -6167,6 +6167,11 @@
          }
         ],
         "height": 800,
+        "legend": {
+         "title": {
+          "text": "Collection"
+         }
+        },
         "template": {
          "data": {
           "bar": [
@@ -13135,6 +13140,11 @@
          }
         ],
         "height": 1500,
+        "legend": {
+         "title": {
+          "text": "Collection"
+         }
+        },
         "template": {
          "data": {
           "bar": [
@@ -16316,6 +16326,11 @@
         }
        ],
        "layout": {
+        "legend": {
+         "title": {
+          "text": "Collection"
+         }
+        },
         "template": {
          "data": {
           "bar": [
@@ -17422,7 +17437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -17440,7 +17455,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2b8217f9b80>"
+       "<IPython.lib.display.IFrame at 0x2b821ed0d10>"
       ]
      },
      "metadata": {},
